new change bg shadow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .sc-cBYhjr.hZUxNm {
-    font-weight: 700;
-    color: #64748b;
-  }
-  .sc-gJhJTp.hObTVa.rdt_TableHead {
-    border-bottom: 1px solid #e5e7eb;
-  }
-  
-  .frVVmQ:hover {
-    border-radius: 0 !important;
-  }
+  font-weight: 700;
+  color: #64748b;
+}
+.sc-gJhJTp.hObTVa.rdt_TableHead {
+  border-bottom: 1px solid #e5e7eb;
+}
+
+.frVVmQ:hover {
+  border-radius: 0 !important;
+}
+.sc-fQpRED.dlsHpZ.rdt_Table {
+  margin-top: 20px;
+}
